# medi_me

./: .gitignore  Makefile  app.py  config.yaml  pyproject.toml  readme.md
data/: scraped_doctors_overview.json
notebooks/: modelling.ipynb
src/: app.py  dr_dataclass.py  openai_query.py  scrape_doctor_detail.py  scrape_doctor_overview.py  scrape_util.py  scraper.py
src/app/: app.py
src/elastic_search/: add_index_data.py  create_index.py  main.py  populate_index.py  query_data.py  query_index.py  utils.py
src/scrape/: doctor_detail.py  doctor_overview.py  dr_dataclass.py  util.py
