[tool.poetry]
name = "medi-me"
version = "0.1.0"
description = "To project earnings through to the future!"
authors = ["steven <stevenvuong96@gmail.com>"]
readme = "README.md"
packages = [{include = "earnings_projector"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.19.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"